# app-ka-test

./: .gitignore  CHANGELOG.md  README.md  action_config.toml  environment.yml  pyproject.toml  requirements.txt  semantic-release.toml
.github/: pull_request_template.md
.github/workflows/: check_request.yaml  develop.yaml  generate_release_auto.yaml  gitops-test.yaml  manual-dispatch-release.yaml  pr-review.yaml  pr_release_sample.yaml  pre-release-dispatch.yaml  release-on-new-tag.yaml  release-on-tag.yaml  release-test.yaml  release_python.yaml  tag-on-pr-merge.yaml  tool-conda-pip-checker.yaml  tool-docker.yaml  tool-gitops.yaml  tool-json.yaml  tool-pr-linter.yaml  tool-pylint.yaml
conda/: meta.yaml
conda_b/: meta.yaml
conda_c/: conda_build_config.yaml
src/: DockerfileWorker  main.py
src/app/: package.json
src/app/setup/: print_config.py
src/app/utils/: __init__.py  toml_verification.py  yaml_helper.py
tests/: conftest.py  test_basic_ops.py
