[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "app-python"
version = "1.3.0"
authors = [{ name = "Kristoffer Andersen", email = "john.doe@whoknows.com" }]
description = "A Python application"
readme = "README.md"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
